// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component has the class when select 1`] = `
<div
  className="selected"
  onClick={[Function]}
>
  test
  <a
    className="delit"
  >
    ✖
  </a>
</div>
`;

exports[`Component no the class 1`] = `
<div
  className=""
  onClick={[Function]}
>
  test
  <a
    className="delit"
  >
    ✖
  </a>
</div>
`;
